[package]
name = "taceo-salted-nullifier-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Client for salted-nullifier instance of TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish.workspace = true

[dependencies]
ark-babyjubjub.workspace = true
ark-ff.workspace = true
rand.workspace = true
salted-nullifier-authentication = { package = "taceo-salted-nullifier-authentication", path = "../salted-nullifier-authentication", version = "0.1" }
taceo-oprf = { workspace = true, features = ["client"] }
