[package]
name = "taceo-salted-nullifier-dev-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Dev-Client for salted-nullifier instance of TACEO:OPRF. Used for testing."
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
ark-babyjubjub.workspace = true
ark-ff.workspace = true
clap.workspace = true
eyre.workspace = true
humantime.workspace = true
nodes-observability.workspace = true
oprf-client.workspace = true
oprf-core.workspace = true
oprf-types.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rustls.workspace = true
salted-nullifier-authentication = { package = "taceo-salted-nullifier-authentication", path = "../salted-nullifier-authentication", version = "0.1" }
salted-nullifier-client = { package = "taceo-salted-nullifier-client", path = "../salted-nullifier-client", version = "0.1" }
secrecy.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
webpki-roots.workspace = true
